# ChangeLog for dev-ruby/rubygems
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.131 2010/01/28 00:49:41 flameeyes Exp $

*rubygems-1.3.5-r1 (28 Jan 2010)

  28 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +rubygems-1.3.5-r1.ebuild:
  Port to ruby-ng, try to keep differences to minimal for now.

  21 Dec 2009; Alex Legler <a3li@gentoo.org> -rubygems-1.3.1.ebuild,
  -files/rubygems-1.3.1-gentoo.patch, -files/rubygems-1.3.1-proxy.patch,
  -files/rubygems-1.3.1-setup.patch, -rubygems-1.3.3.ebuild,
  -files/rubygems-1.3.3-setup.patch, -rubygems-1.3.4.ebuild:
  Purge old

  23 Oct 2009; Jeroen Roovers <jer@gentoo.org> rubygems-1.3.5.ebuild:
  Stable for HPPA (bug #284911).

  22 Sep 2009; Tom Gall <tgall@gentoo.org> rubygems-1.3.5.ebuild:
  ppc64 stable #284911

  20 Sep 2009; nixnut <nixnut@gentoo.org> rubygems-1.3.5.ebuild:
  ppc stable #284911

  19 Sep 2009; Raúl Porcel <armin76@gentoo.org> rubygems-1.3.5.ebuild:
  alpha/ia64/sparc stable wrt #283396

  14 Sep 2009; Markus Meier <maekke@gentoo.org> rubygems-1.3.5.ebuild:
  amd64/x86 stable, bug #284911

*rubygems-1.3.5 (30 Jul 2009)

  30 Jul 2009; Gordon Malm <gengor@gentoo.org> +rubygems-1.3.5.ebuild,
  +files/rubygems-1.3.5-setup.patch:
  Version bump.

*rubygems-1.3.4 (05 Jul 2009)

  05 Jul 2009; Alex Legler <a3li@gentoo.org> +rubygems-1.3.4.ebuild:
  Version bump.

  07 Jun 2009; Raúl Porcel <armin76@gentoo.org> rubygems-1.3.3.ebuild:
  Add ~arm/~s390

  09 May 2009; Alex Legler <a3li@gentoo.org>
  -files/rubygems-0.9.1-no_post_install.patch,
  -files/rubygems-0.9.1-no_rdoc_install.patch, -rubygems-0.9.4-r2.ebuild,
  -files/rubygems-0.9.4-shebang-env-fix.patch, -rubygems-1.1.1.ebuild,
  -files/rubygems-1.1.1-setup.patch, -rubygems-1.2.0.ebuild,
  -files/rubygems-1.2.0-setup.patch, rubygems-1.3.1.ebuild,
  -rubygems-1.3.1-r30.ebuild, -files/no-manage_gems.patch,