@@ -13,6 +13,7 @@ AUX rubygems-1.3.3-setup.patch 886 RMD160 fa4610c20574a42f2703748359dd0bf50b8389
 AUX rubygems-1.3.5-setup.patch 942 RMD160 69e8714f72482387019bad7b9254110c6bb8b957 SHA1 ba58de08e29731de4ce820f7d8e4c60de2fcee6e SHA256 d3e7c43ff20a649d1c731e27b0791f110b920201a28607091da0166495709b97
 DIST rubygems-1.3.5.tgz 278469 RMD160 2d17f0de2d387bd2a034916cb79531110f3be196 SHA1 8545f25d00c757a310b879a2580e56d6012fc981 SHA256 c0928cc1ae54dedfb5f57ad3829882c1f90e42bc17bf50491aa6f93a937546ac
 EBUILD rubygems-1.3.5-r1.ebuild 2973 RMD160 3617ad166fbea85ff466c3b889f1c25e0ea13c4f SHA1 2cfab76a7698907214fc8c0b0ef20544a114fb7e SHA256 dc03a5b0a512d73f4edaef4830ce13fb928f32410b57d1a406ff3a0058204054
+EBUILD rubygems-1.3.5-r2.ebuild 3187 RMD160 5999b615dcc863aa939772508c042ac3dfcf11a7 SHA1 2ca217301813346e9a3bb02948abdd275d79004c SHA256 8e70c0ec295d81cbeb43e31d58a96ea80293aa32cf9cceaffde07fd4d7127513
 EBUILD rubygems-1.3.5.ebuild 3329 RMD160 dc752348f35a49b3d92bd0ee6e113e7e4c068712 SHA1 7db482b511879087e89a78e90d0da47f417f801b SHA256 e71ae8bfa91b669621c2a10ebf9543bdb4faf731b953dd86dae41800813938c0
-MISC ChangeLog 19761 RMD160 4347dc11b362de0b4e7f2fad4ee8221d6e416c3f SHA1 7a64c36c481da0a81184244f9198e9b970873384 SHA256 26812d9fcbd78c7b47ee84d28182ea06408d8054bb154b79b75b3a2f04dd1811
+MISC ChangeLog 20057 RMD160 90a7ef630dd9e055deed8e223ef418e6aef933f4 SHA1 ad8b93e56b61f296fb20384eae7d42be56925c1b SHA256 d9be1630ceb2f88a21d958c09e004e4a2b49e51d32578f0a6c515693f7752e2b
 MISC metadata.xml 247 RMD160 eb1d10b4366542ce2f232dcaf7317341b6b5608f SHA1 fcb6e2a1d6cda6d45640f9c5a5dfcc0fd4f3ab3b SHA256 633ae9912e8dd27f76b9cf53f5ad0d3222db85d9a19a76da7fd5e26f40b144e3
