@@ -1,6 +1,16 @@
 # ChangeLog for dev-ruby/rubygems
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.131 2010/01/28 00:49:41 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.133 2010/01/31 23:11:51 flameeyes Exp $
+
+  31 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  rubygems-1.3.5-r2.ebuild:
+  Avoid double-versioning.
+
+*rubygems-1.3.5-r2 (31 Jan 2010)
+
+  31 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +rubygems-1.3.5-r2.ebuild:
+  Add JRuby support here, rather than keep it bundled in JRuby.
 
 *rubygems-1.3.5-r1 (28 Jan 2010)
 
